cmake_minimum_required(VERSION 3.9)
project(Progra.2.datos.c-)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_PREFIX_PATH "/opt/qt/5.6/gcc_64/")
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5PrintSupport REQUIRED)
find_package(Qt5Xml REQUIRED)
set(SOURCE_FILES main.cpp Estructuras/Nodo.h Estructuras/Lista.h Data/Cancion.cpp Data/Cancion.h Estructuras/Quicksort.cpp Estructuras/Quicksort.h Estructuras/BubbleSort.cpp Estructuras/BubbleSort.h Estructuras/RadixSort.cpp Estructuras/RadixSort.h)
add_executable(Progra.2.datos.c- ${SOURCE_FILES} main.cpp )
target_link_libraries(Progra.2.datos.c- json-c)
target_link_libraries(Progra.2.datos.c- Qt5::Widgets Qt5::Core Qt5::Network Qt5::Sql
        ${Boost_LIBRARIES})
target_link_libraries(Progra.2.datos.c- -lpthread)
